# ghostinthewsl

./: .gitignore  CHANGELOG.md  README.md  build.zig.zon
.github/workflows/: test.yml  windows-release.yml
docs/: vsock-design.md
installer/: windows.iss
scripts/: build.sh  deploy-bridge.sh  package.sh  test-bridge.sh  update-conpty.sh
shell-integration/: ghostwsl.bash  ghostwsl.fish  ghostwsl.zsh
src/: Command.zig  Surface.zig  main_c.zig  pty.zig
src/apprt/win32/: App.zig  CommandPalette.zig  PromptDialog.zig  SearchPanel.zig  SplitTree.zig  Surface.zig  VsockBridge.zig  Window.zig  sys.zig  wsl_log.zig
src/cli/: edit_config.zig  list_fonts.zig
src/config/: Config.zig  edit.zig  file_load.zig
src/font/: SharedGridSet.zig
src/os/: path.zig  windows.zig
src/renderer/: Thread.zig
src/terminal/kitty/: graphics_exec.zig  graphics_storage.zig
src/termio/: Exec.zig  Options.zig  Termio.zig  Thread.zig  backend.zig  stream_handler.zig
wsl-pty-bridge/: Cargo.toml
wsl-pty-bridge/.cargo/: config.toml
wsl-pty-bridge/src/: bridge.rs  daemon.rs  main.rs  protocol.rs  pty.rs
